tests/expectations/compiler/definition/tuple_def_fail.out
Error [EPAR0370047]: expected pattern
    --> compiler-test:4:10
     |
   4 |     let (1u8+1u8,1u8+1u8): (u8,u8) = (1u8,2u8);
     |          ^^^^^^^
Error [EPAR0370047]: expected pattern
    --> compiler-test:4:18
     |
   4 |     let (1u8+1u8,1u8+1u8): (u8,u8) = (1u8,2u8);
     |                  ^^^^^^^
